--- a/.github/workflows/cycles.yaml
+++ b/.github/workflows/cycles.yaml
@@ -18,3 +18,18 @@
         - name: Test with pytest
           run: |
             python -m pytest $(git ls-files '*.py')
+    Lint:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4.1.1
+        - name: Set up Python 3.13
+          uses: actions/setup-python@v5.0.0
+          with:
+            python-version: "3.13"
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+        - name: Analyze with pylint
+          run: |
+            python -m pylint $(git ls-files '*.py')
